--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,4 +1,4 @@
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,13 +7,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    style="?android:attr/buttonBarStyle"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/demo_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/different_styles_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/button_text"/>
+        android:background="@drawable/button_drawable"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_marginBottom="@dimen/button_margin_bottom"
+        android:text="@string/different_styles_button_text"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/custom_style_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_drawable"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_marginBottom="@dimen/button_margin_bottom"
+        android:text="@string/custom_style_button"/>
+
+</LinearLayout>
