--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,39 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
-        <!-- Customize your theme here. -->
+    <style
+        name="AppTheme"
+        parent="android:Theme.Holo.Light">
+
+        <item name="android:actionBarStyle">@style/ActionBar</item>
+    </style>
+
+    <style
+        name="ActionBar"
+        parent="@android:style/Widget.Holo.Light.ActionBar">
+
+        <item name="android:background">@color/actionbar_color</item>
+        <item name="android:titleTextStyle">@style/ActionBarTitleText</item>
+        <item name="android:subtitleTextStyle">@style/ActionBarSubtitleText</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:icon">@android:color/transparent</item>
+
+    </style>
+
+    <!-- ActionBar title text -->
+    <style
+        name="ActionBarTitleText"
+        parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+
+        <item name="android:textColor">@color/actionBar_title_text</item>
+    </style>
+
+    <!-- ActionBar subtitle text -->
+    <style
+        name="ActionBarSubtitleText"
+        parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle">
+
+        <item name="android:textColor">@color/actionBar_subtitle_text</item>
     </style>
 
 </resources>
